fix: fix text align

--- a/src/components/DrinkItem/DrinkItem.scss
+++ b/src/components/DrinkItem/DrinkItem.scss
@@ -1,7 +1,7 @@
 @import '../../share/assets/scss/variables.scss';
 .drink-item {
   display: inline-block;
-  text-align: left;
+  text-align: center;
   cursor: pointer;
   background-color: white;
   margin: 20px;
@@ -11,7 +11,7 @@
   border-style: solid;
   transition: 200ms;
   width: 200px;
-  min-height: 250px;
+  min-height: 280px;
   box-shadow: 0px 10px 20px $box-shadow;
 
   &__image {
