--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -48,5 +48,5 @@
 }
 
 .filter {
-  filter: blur(20px);
+  filter: blur(5px);
 }
