--- a/src/share/assets/scss/variables.scss
+++ b/src/share/assets/scss/variables.scss
@@ -19,5 +19,5 @@ $background-color: #eedfd2;
 $orange: #ffe7ba;
 @mixin background-blur {
   background: rgba(51, 51, 51, 0.3);
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(5px);
 }
